// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputLabel should render correctly 1`] = `
<label
  className="InputLabel"
  htmlFor={null}
  id={null}
/>
`;

exports[`InputLabel snapshot of span prop set to true 1`] = `
<span
  className="InputLabel"
  id={null}
/>
`;
